# global-stocktake

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.argilla.yml  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
classifiers/: README.md  run_on_full_dataset.py  trainer.py  utils.py
concepts/: .gitattributes  README.md  unfccc_files.csv
concepts/5-COP28-GST-asks/: input.xlsx  output.xlsx  output_with_metadata.xlsx  spans.csv
concepts/adaptation/: input.xlsx  spans_cop28.csv  spans_july_2023.csv  spans_new_doc_post_cop28.csv  spans_september_2023.csv
concepts/barriers-and-challenges/: input.xlsx  spans_cop28.csv  spans_july_2023.csv  spans_new_doc_post_cop28.csv  spans_october_2023.csv  spans_september_2023.csv
concepts/best-practice-v1/: input.xlsx
dev-docs/: getting-started.md
docs/: METHODOLOGY.md  README.md  UNPROCESSED_DOCUMENTS.md  _config.yml  argilla.md  explorer.md
notebooks/: co-occurrence-report.html  co-occurrence-report.ipynb  create-unprocessed-docs-list.ipynb  explorer-dashboard.html  explorer-dashboard.ipynb  explorer_dashboard.py  explorer_glue.ipynb  parser_output_quality.ipynb  simple_concept.html  simple_concept.ipynb  simple_concept_2.ipynb  simple_disaggregated_concept.html  simple_disaggregated_concept.ipynb  utils.py
scrapers/unfccc-info-portal/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scrapers/unfccc-info-portal/src/: main.py  processing.py  spiders.py
src/: config.py  generate_parser_inputs.py  main.py
tests/: test_api.py
(+282 files in other folders)
